got rid of errors

--- a/WeekendChallenge_3/server/public/index.html
+++ b/WeekendChallenge_3/server/public/index.html
@@ -21,18 +21,19 @@
         </section>
         <section id="displayArea">
             <h2>Display Tasks</h2>
-            <table class="table table-striped" id="mainTable">
-                <thead id="tableHead">
-                    <tr>
-                        <th>Task Name</th>
-                        <th>Status</th>
-                    </tr>
-                </thead>
-                <tbody id="taskTable">
+            <section id="tasksToComplete">
+                <table class="table table-striped" id="mainTable">
+                    <thead id="tableHead">
+                        <tr>
+                            <th>Task Name</th>
+                            <th>Status</th>
+                        </tr>
+                    </thead>
+                    <tbody id="taskTable">
 
-                </tbody>
-            </table>
-
+                    </tbody>
+                </table>
+            </section>
         </section>
     </main>
     <footer>
